microk8s/staging/calibre-web.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: calibre-web


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: calibre-web
  labels:
    app: calibre-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
      - name: calibre-web
        image: linuxserver/calibre-web:latest
        ports:
        - name: http
          containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre-web
spec:
  type: ClusterIP
  selector:
    app: calibre-web
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: calibre-web
  namespace: calibre-web
  annotations:
    # traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /calibre-web
        backend:
          serviceName: calibre-web
          servicePort: web


---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: calibre-web
spec:
  stripPrefix:
    prefixes:
    - /calibre-web

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: replacepath
  namespace: calibre-web
spec:
  replacePathRegex:
    regex: ^/calibre-web/(.*)
    replacement: /$1

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-web
  namespace: calibre-web
spec:
  entrypoints:
  - http
  routes:
  - match: PathPrefix(`/calibre-web`)
    kind: Rule
    services:
    - name: calibre-web
      port: 80
    middlewares:
    - name: replacepath
